@@ -1,3 +1,8 @@
+2007-06-22  Isaiah Beerbower <ipaqah@tm.net>
+	* PQFontSampleView.m ([-drawRect:]): Worked around problem with GNUstep's
+		[-displayName].
+	* PQFontSampleView.m ([-drawRect:]): Fix a drawing bug caused by auto resize.
+
 2007-06-21  Isaiah Beerbower <ipaqah@tm.net>
 	* PQSampleController.*: Removed some commented out code.
 	* PQController.m: Better method for finding style name.
